<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>BDD</groupId>
  <artifactId>Automation</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<serenity.version>2.2.10	</serenity.version> <!-- https://bintray.com/serenity/maven/serenity-core/ -->
		<serenity.maven.version>2.2.10</serenity.maven.version>
		<serenity.cucumber.version>1.5.9</serenity.cucumber.version> <!-- https://bintray.com/serenity/maven/serenity-cucumber/ -->
	</properties>
	
		<repositories>
		<repository>
			<id>serenity</id>
			<name>bintray</name>
			<url>http://dl.bintray.com/serenity/maven</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>serenity</id>
			<name>bintray-plugins</name>
			<url>http://dl.bintray.com/serenity/maven</url>
		</pluginRepository>
	</pluginRepositories>
  
  	<dependencies>
			
			<dependency>
    			<groupId>io.cucumber</groupId>
    			<artifactId>cucumber-java</artifactId>
    			<version>6.2.0</version>
			</dependency>

			<dependency>
    			<groupId>io.cucumber</groupId>
    			<artifactId>cucumber-junit</artifactId>
    			<version>6.2.0</version>
    			<scope>test</scope>
			</dependency>
			
			<dependency>
    			<groupId>io.cucumber</groupId>
    			<artifactId>cucumber-core</artifactId>
    			<version>6.2.0</version>
			</dependency>
			
			<dependency>
				<groupId>net.serenity-bdd</groupId>
				<artifactId>serenity-core</artifactId>
				<version>${serenity.version}</version>
			</dependency>
			
			<dependency>
				<groupId>net.serenity-bdd</groupId>
				<artifactId>serenity-junit</artifactId>
				<version>${serenity.version}</version>
			</dependency>
			
			<dependency>
    			<groupId>net.serenity-bdd</groupId>
    			<artifactId>serenity-single-page-report</artifactId>
    			<version>2.2.10</version>
			</dependency>
			
			<dependency>
				<groupId>net.serenity-bdd</groupId>
				<artifactId>serenity-cucumber</artifactId>
				<version>${serenity.cucumber.version}</version>
			</dependency>
			
			<dependency>
       			<groupId>org.slf4j</groupId>
       			<artifactId>slf4j-api</artifactId>
       			<version>1.7.5</version>
   			</dependency>
   			
   			<dependency>
       			<groupId>org.slf4j</groupId>
       			<artifactId>slf4j-log4j12</artifactId>
       			<version>1.7.5</version>
   			</dependency>
   			
   			<dependency>
    			<groupId>io.cucumber</groupId>
    			<artifactId>gherkin</artifactId>
   			 	<version>14.1.0</version>
			</dependency>
			
			<dependency>
    			<groupId>io.cucumber</groupId>
    			<artifactId>cucumber-jvm-deps</artifactId>
    			<version>1.0.6</version>
    			<scope>provided</scope>
           </dependency>
           
  
			<dependency>
    			<groupId>junit</groupId>
    			<artifactId>junit</artifactId>
    			<version>4.12</version>
    			<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>net.serenity-bdd</groupId>
				<artifactId>serenity-jira-plugin</artifactId>
				<version>1.8.0</version>
			</dependency>
			
  	</dependencies>
  	
  	<build>
  	
  		<plugins>
  		
  				<plugin>
  						
  				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>${serenity.maven.version}</version>
				<dependencies>
					<dependency>
						<groupId>net.serenity-bdd</groupId>
						<artifactId>serenity-core</artifactId>
						<version>${serenity.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
  				
  				</plugin>
  				
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<skip>false</skip>
				</configuration>
			</plugin>
			
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<includes>
						<include>**/setup/**/*.java</include>
						<include>**/setup/*.java</include>
					</includes>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
  				
  				<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-compiler-plugin</artifactId>
						<version>3.2</version>
						<configuration>
							<source>1.8</source>
							<target>1.8</target>
						</configuration>
				</plugin>
				
				<plugin>
				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>${serenity.maven.version}</version>
				<dependencies>
					<dependency>
						<groupId>net.serenity-bdd</groupId>
						<artifactId>serenity-core</artifactId>
						<version>${serenity.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
				</plugin>
				
				<plugin>
    <groupId>net.serenity-bdd.maven.plugins</groupId>
    <artifactId>serenity-maven-plugin</artifactId>
    <version>${serenity.version}</version>
    <dependencies>
        <dependency> 
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-single-page-report</artifactId>
            <version>${serenity.version}</version>
        </dependency>
    </dependencies>
    <configuration>
        <tags>${tags}</tags>
        <reports>single-page-html</reports> 
    </configuration>
    <executions>
        <execution>
            <id>serenity-reports</id>
            <phase>post-integration-test</phase>
            <goals>
                <goal>aggregate</goal>
            </goals>
        </execution>
    </executions>
</plugin>
  		
  		
  		</plugins>
  	
  	</build>
</project>